fix some spacing

--- a/src/components/about-me/AboutMe.styles.scss
+++ b/src/components/about-me/AboutMe.styles.scss
@@ -33,7 +33,7 @@
 .section-title-container {
   position: relative;
   width: 30rem;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
 
   opacity: 0;
   transition: all 1s;
