--- a/src/components/introduction/Introduction.styles.scss
+++ b/src/components/introduction/Introduction.styles.scss
@@ -13,6 +13,7 @@
     align-items: center;
     height: 50rem;
     padding-top: 1rem;
+    margin-bottom: 5rem;
   }
 
   @media only screen and (max-width: 799px) {
